update. problem was not understanding events. now all event work, but fullscreen mode doesn't actually go fullscreen

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>Custom HTML5 Video Player</title>
-  <script src="js/videoPlayer.js"></script>
+
 </head>
 
 <!-- Body -->
@@ -27,7 +27,7 @@
     <!-- Custom video controls -->
     <div id="video_controls">
     	<!-- Add play button -->
-      <button id="play" title="Play"> &#x25BA;</button>
+      <button id="play_pause" title="Play Pause"> &#x25BA;</button>
 
       <!-- Add progress bar -->
       <div id="progress">
@@ -42,6 +42,8 @@
   </div>
 
 </div>
+
+  <script type="text/javascript" src="js/videoPlayer.js"></script>
 
 </body>
 </html>
